<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    >

    <LinearLayout
        android:id="@+id/lay_game_menu"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_Background"
        android:padding="5dp">

        <Button
            android:id="@+id/btn_restart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/btn_menu"
            android:text="@string/restart"
            android:textColor="@color/color_Text"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btn_quit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/btn_menu"
            android:text="@string/quit"
            android:textColor="@color/color_Text"/>

        <Button
            android:id="@+id/btn_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/btn_menu"
            android:text="@string/settings"
            android:textColor="@color/color_Text"/>

        <Button
            android:id="@+id/btn_tutorial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/btn_menu"
            android:text="@string/tutorial_t"
            android:textColor="@color/color_Text"/>

    </LinearLayout>
</LinearLayout>