<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lay_about"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_Background"
    android:gravity="center"
    android:padding="5dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_logo_about"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginBottom="10dp"
                android:src="@mipmap/logo_sander_soft"/>

            <TextView
                android:id="@+id/lbl_sandersoft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="SanderSoft"
                android:textSize="12pt"
                android:textColor="@color/color_Text"
                />

            <TextView
                android:id="@+id/lbl_created"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textColor="@color/color_Text"
                />

            <TextView
                android:id="@+id/lbl_alexander"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="Alexander Meixner"
                android:textSize="9pt"
                android:textColor="@color/color_Text"
                />

            <TextView
                android:id="@+id/lbl_version_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:textColor="@color/color_Text"
                />

            <TextView
                android:id="@+id/lbl_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="1.0.0"
                android:textSize="9pt"
                android:textColor="@color/color_Text"
                />

            <Button
                android:id="@+id/btn_support"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/btn_menu"
                android:text="@string/menu_support"
                android:textColor="@color/color_Text"
                />

            <Button
                android:id="@+id/btn_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/btn_menu"
                android:text="@string/menu_rate"
                android:textColor="@color/color_Text"
                />

        </LinearLayout>
    </ScrollView>


</LinearLayout>